# xcai_demo

./: .gitignore  prebuild_xcai_classification_polylines.py  pyproject.toml  setup.sh  xcai_classification.py
split_layers_out/: metas.json
split_layers_out_parted/: metas.json
