[tool.poetry]
name = "xcai-demo"
version = "0.1.0"
description = ""
authors = ["RyoJerryYu <tzl19961216@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
xcai = "^0.2.1"
opencv-python = "^4.10.0.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
